<resources>
    <string name="app_name">Quick Maths</string>
    <string name="start">Start</string>
    <string name="additional_resources">Additional Resources</string>
    <string name="practise">Practise</string>
    <string name="test">Test</string>
    <string name="view_notes">View Notes</string>
    <string name="title_activity_notes_creator">NotesCreator</string>
    <string name="type_here">Type here...</string>
    <string name="quiz">Quiz</string>
    <string name="simple_arithmetic">Simple Arithmetic</string>
    <string name="fraction_arithmetic">Fraction Arithmetic</string>
    <string name="linear_equations">Linear Equations</string>
</resources>
